# mozy

./: .gitignore  CMakeLists.txt  LICENSE  README.md
script/: download_cpm.sh
src/: main.cpp
test/: CMakeLists.txt  test.cpp
